--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,7 @@
-version : '0.1.0.{build}'
+version : '0.1.0.{build}-prerelease'
 build_script: ./build.bat %APPVEYOR_BUILD_VERSION%
 test: off
+
+artifacts:
+ - path: 'src/Msgpack.Net/bin/Release/*.nupkg'
+   name: Msgpack.Net
